--- a/proyecto-war/src/main/webapp/index.xhtml
+++ b/proyecto-war/src/main/webapp/index.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
        xmlns:h="http://xmlns.jcp.org/jsf/html"
-       xmlns:f="http://xmlns.jcp.org/jsf/core">
+       xmlns:f="http://xmlns.jcp.org/jsf/core"
+       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 <h:head>
        <title>Login</title>
@@ -15,7 +16,7 @@
 
               <c:choose>
                   <c:when test="#{!empty infoSesion.usuario}">
-                      <p>Estás autenticado como <h:outputText value="#{infoSesion.usuario.nombre}"/>.</p>
+                      <p>Estás autenticado como <h:outputText value="#{infoSesion.usuario.nombreUsuario}"/>.</p>
                       <p>Para ir a la página principal, pinche <h:link outcome ="mainUsuario.xhtml" value="aquí"/></p>
                       <p>Para iniciar sesión con otra cuenta debe <h:commandLink action="#{infoSesion.invalidarSesion()}">salir</h:commandLink> primero de la aplicación</p>
                   </c:when>
@@ -23,14 +24,14 @@
                   <c:otherwise>
                       <h:panelGrid columns="3">
                           <h:outputText value="Nombre de usuario:"/>
-                          <h:inputText id="user" required="true" value="#{Login.usuario.nombre}"/>
+                          <h:inputText id="user" required="true" value="#{login.usuario.nombreUsuario}"/>
                           <h:message id="userMessage" for="user"/>
   
                           <h:outputText value="Contraseña:"/>
-                          <h:inputSecret id="pass" required="true" value="#{Login.usuario.contras}"/>
+                          <h:inputSecret id="pass" required="true" value="#{login.usuario.password}"/>
                           <h:message id="passwordMessage" for="pass"/>
   
-                          <h:commandButton id="botonLogin" value="Entrar" action="#{Login.loginCliente()}"/>
+                          <h:commandButton id="botonLogin" value="Entrar" action="#{login.loginCliente()}"/>
   
                       </h:panelGrid>
   
