--- a/proyecto-war/src/main/webapp/mainAdmin.xhtml
+++ b/proyecto-war/src/main/webapp/mainAdmin.xhtml
@@ -4,14 +4,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
        xmlns:h="http://xmlns.jcp.org/jsf/html"
-       xmlns:f="http://xmlns.jcp.org/jsf/core">
+       xmlns:f="http://xmlns.jcp.org/jsf/core"
+       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 <h:head>
        <title>Página Main Admin</title>
 </h:head>
 
 <h:body>
-       <h1><h:outputText value="Página Administrador"/></h1>
+	<c:choose>
+		<c:when test="#{empty infoSesion.usuario}">
+			<p>No está autenticado, pinche <h:link outcome="index.xhtml">aquí</h:link> para iniciar sesión</p>
+		</c:when>
+		<c:when test ="${!infoSesion.admin}">
+			<p>No tiene permiso para ver este recurso, pinche <h:link outcome="mainUsuario.xhtml">aquí</h:link></p>
+		</c:when>
+		
+		<c:otherwise>
+       		<h1><h:outputText value="Página Administrador"/></h1>
 
               <h:outputText id="saludo" value="Aquí podrás administrar tu aplicación"/>
               <br/>
@@ -53,8 +63,8 @@
               <!--RF 16-->
               <!--Por implementar-->
 
-
-
+			</c:otherwise>
+	</c:choose>
 
 
 
