--- a/proyecto-war/src/main/webapp/mainUsuario.xhtml
+++ b/proyecto-war/src/main/webapp/mainUsuario.xhtml
@@ -7,7 +7,7 @@
        xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <h:head>
-       <title>Página Main Admin</title>
+       <title>Página Main</title>
 </h:head>
 
 <h:body>
