--- a/proyecto-war/src/main/webapp/cuentaSegregadaAbrir - copia.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaAbrir - copia.xhtml
@@ -15,7 +15,7 @@
               <h:commandButton id="cuentaPooledAbrirClick" value="BotonAltaCliente" action="#{cuentaPooledAbrir.cuentaPooledAbrir()}" class="buttons"/>
 
               <h:outputText value="IBAN:"/>
-              <h:inputText id="iban" required="true" value="#{cuentaPooledAbrir.seg.iban}"/>
+              <h:inputText id="iban" required="true" value="#{cuentaPooledAbrir.seg.iban}" class="controls"/>
               <h:message id="ibanMessage" for="iban"/>
 
               <h:outputText value="SWIFT:"/>
