--- a/proyecto-war/src/main/webapp/individualModificar.xhtml
+++ b/proyecto-war/src/main/webapp/individualModificar.xhtml
@@ -31,7 +31,7 @@
               <h:message id="apellidoMessage" for="apellido"/>
 
               <h:outputText value="Fecha de nacimiento:"/>
-              <h:inputText id="fechaNacimiento" required="true" value="#{individualModificar.individual.fechaNacimiento}" class="controls"/>
+              <h:inputText id="fechaNacimiento" required="false" value="#{individualModificar.individual.fechaNacimiento}" class="controls"/>
               <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>
 
               <h:outputText value="Identificacion:"/>
