--- a/proyecto-war/src/main/webapp/cuentaSegregadaAbrir - copia.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaAbrir - copia.xhtml
@@ -10,7 +10,7 @@
 <h:body>
        <h1><h:outputText id="abrirCuentaPooled" value="Abrir una cuenta pooled"/></h1>
        <h:form id="cuentaPooledAbrir">
-              <h:outputText value:="Introduzca los datos"/>
+              <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3"></h:panelGrid>
               <h:commandButton id="cuentaPooledAbrirClick" value="BotonAltaCliente" action="#{cuentaPooledAbrir.cuentaPooledAbrir()}" class="buttons"/>
 
