--- a/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
@@ -10,8 +10,8 @@
 <h:body>
        <h1><h:outputText id="abrirCuentaSegregada" value="Abrir una cuenta segregada"/></h1>
        <h:form id="cuentaSegregadaAbrir">
-              <h:outputText value:="Introduzca los datos"/>
-              <h:panelGrid columns="3"></h:panelGrid>
+              <h:outputText value="Introduzca los datos"/>
+              <h:panelGrid columns="3">
               <h:commandButton id="cuentaSegregadaAbrirClick" value="BotonAltaCliente" action="#{cuentaSegregadaAbrir.cuentaSegregadaAbrir()}" class="buttons"/>
 
               <h:outputText value="IBAN:"/>
@@ -19,7 +19,7 @@
               <h:message id="ibanMessage" for="iban"/>
 
               <h:outputText value="SWIFT:"/>
-              <h:inputSecret id="swift" required="false" value="#{cuentaSegregadaAbrir.seg.swift}" class="controls"/>
+              <h:inputText id="swift" required="false" value="#{cuentaSegregadaAbrir.seg.swift}" class="controls"/>
               <h:message id="swiftMessage" for="swift"/>
 
               <h:outputText value="comision:"/>
@@ -27,5 +27,6 @@
               <h:message id="comisionMessage" for="comision"/>
 
           </h:panelGrid>
+       </h:form>
 </h:body>
 </html>
