--- a/proyecto-war/src/main/webapp/empresaModificar.xhtml
+++ b/proyecto-war/src/main/webapp/empresaModificar.xhtml
@@ -14,7 +14,7 @@
        <h1><h:outputText id="saludo" value="Modificar a un cliente empresa"/></h1>
 
        <h:form id="empresaModificar">
-              <h:outputText value:="Introduzca los datos"/>
+              <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3"></h:panelGrid>
 
               <h:commandButton id="empresaModificarClick" value="BotonEmpresaModificarCliente" action="#{empresaModificar.empresaModificar()}" class="buttons"/>
