--- a/proyecto-war/src/main/webapp/empresaAlta.xhtml
+++ b/proyecto-war/src/main/webapp/empresaAlta.xhtml
@@ -20,7 +20,7 @@
               <h:commandButton id="empresaAltaClick" value="BotonAltaCliente" action="#{empresaAlta.empresaAlta()}" class="buttons"/>
 
               <h:outputText value="Razon social:"/>
-              <h:inputText id="razonSocial" required="true" value="#{empresaAlta.empresa.razonSocial}" class="controls"/>
+              <h:inputText id="razonSocial" required="true" value="#{empresaAlta.empresa.razon_Social}" class="controls"/>
               <h:message id="razonSocialMessage" for="razonSocial"/>
 
               <h:outputText value="Identificacion:"/>
