--- a/proyecto-war/src/main/webapp/mainAdmin.xhtml
+++ b/proyecto-war/src/main/webapp/mainAdmin.xhtml
@@ -32,7 +32,8 @@
               <br><h:button outcome ="empresaModificar.xhtml" id="empresaModificar" value="Modificar a una empresa" class="buttons"/> </br>
 
               <!--RF 4-->
-              <br><h:button outcome ="clienteBaja.xhtml" id="clienteBaja" value="Dar de baja a un cliente" class="buttons"/> </br>
+              <br><h:button outcome ="individualEliminar.xhtml" id="individualEliminar" value="Dar de baja a un individual" class="buttons"/> </br>
+              <br><h:button outcome ="empresaEliminar.xhtml" id="empresaEliminar" value="Dar de baja a una empresa" class="buttons"/> </br>
 
               <!--RF 5-->
               <br><h:button outcome ="cuentaSegregadaAbrir.xhtml" id="cuentaSegregadaAbrir" value="Abrir cuenta segregada" class="buttons"/> </br>
