--- a/proyecto-war/src/main/webapp/mainUsuario.xhtml
+++ b/proyecto-war/src/main/webapp/mainUsuario.xhtml
@@ -16,6 +16,8 @@
               <h:outputText id="saludo" value="Aquí podrás usar tu aplicación"/>
               <br/>
 
+              <!--RF 14-->
+              <br><h:button outcome ="transaccionGenerar.xhtml" id="transaccionGenerar" value="Generar transaccion" class="buttons"/> </br>
               
               
 
