correccion xhtml id´s y cuentas

--- a/proyecto-war/src/main/webapp/autorizadosModificar.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosModificar.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
        <h1><h:outputText id="autorizadosModificar" value="Modificar autorizado"/></h1>
-       <h:form id="autorizadosModificar">
+       <h:form id="AutorizadosModificar">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
               <h:commandButton id="autorizadosModificarClick" value="BotonModificarAniadir" action="#{autorizadosModificar.autorizadosModificar()}" class="buttons"/>
