--- a/proyecto-war/src/main/webapp/autorizadosAniadir.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosAniadir.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
        <h1><h:outputText id="autorizadosAniadir" value="Aniadir autorizado"/></h1>
-       <h:form id="autorizadosAniadir">
+       <h:form id="AutorizadosAniadir">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
               <h:commandButton id="autorizadosAniadirClick" value="BotonAutorizadoAniadir" action="#{autorizadosAniadir.autorizadosAniadir()}" class="buttons"/>
