--- a/proyecto-war/src/main/webapp/autorizadosEliminar.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosEliminar.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
        <h1><h:outputText id="autorizadosEliminar" value="Eliminar autorizado"/></h1>
-       <h:form id="autorizadosEliminar">
+       <h:form id="AutorizadosEliminar">
               <h:outputText value="Introduzca la identificacion"/>
               <h:panelGrid columns="3">
               <h:commandButton id="autorizadosEliminarClick" value="BotonAutorizadoEliminar" action="#{autorizadosEliminar.autorizadosEliminar()}" class="buttons"/>
