--- a/proyecto-war/src/main/webapp/cuentaPooledAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaPooledAbrir.xhtml
@@ -8,8 +8,8 @@
        <title>Pagina web</title>
 </h:head>
 <h:body>
-       <h1><h:outputText id="abrirCuentaPooled" value="Abrir una cuenta pooled"/></h1>
-       <h:form id="cuentaPooledAbrir">
+       <h1><h:outputText id="cuentaPooledAbrir" value="Abrir una cuenta pooled"/></h1>
+       <h:form id="CuentaPooledAbrir">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3"></h:panelGrid>
               <h:commandButton id="cuentaPooledAbrirClick" value="BotonCuentaPooledAbrir" action="#{cuentaPooledAbrir.cuentaPooledAbrir()}" class="buttons"/>
@@ -21,6 +21,22 @@
               <h:outputText value="SWIFT:"/>
               <h:inputText id="swift" required="false" value="#{cuentaPooledAbrir.pol.swift}" class="controls"/>
               <h:message id="swiftMessage" for="swift"/>
+
+              <h:outputText value="Estado:"/>
+              <h:inputText id="estado" required="true" value="#{cuentaPooledAbrir.pol.estado}" class="controls"/>
+              <h:message id="estadoMessage" for="estado"/>
+
+              <h:outputText value="Fecha Apertura:"/>
+              <h:inputText id="fechaApertura" required="true" value="#{cuentaPooledAbrir.pol.fechaApertura}" class="controls"/>
+              <h:message id="fechaAperturaMessage" for="fechaApertura"/>
+
+              <h:outputText value="Fecha Cierre:"/>
+              <h:inputText id="fechaCierre" required="false" value="#{cuentaPooledAbrir.pol.fechaCierre}" class="controls"/>
+              <h:message id="fechaCierreMessage" for="fechaCierre"/>
+
+              <h:outputText value="Clasificacion:"/>
+              <h:inputText id="clasificacion" required="false" value="#{cuentaPooledAbrir.pol.clasificacion}" class="controls"/>
+              <h:message id="clasificacionMessage" for="clasificacion"/>
 
 
           </h:panelGrid>
