--- a/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
@@ -8,8 +8,8 @@
        <title>Pagina web</title>
 </h:head>
 <h:body>
-       <h1><h:outputText id="abrirCuentaSegregada" value="Abrir una cuenta segregada"/></h1>
-       <h:form id="cuentaSegregadaAbrir">
+       <h1><h:outputText id="cuentaSegregadaAbrir" value="Abrir una cuenta segregada"/></h1>
+       <h:form id="CuentaSegregadaAbrir">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
               <h:commandButton id="cuentaSegregadaAbrirClick" value="BotonAltaCliente" action="#{cuentaSegregadaAbrir.cuentaSegregadaAbrir()}" class="buttons"/>
@@ -21,6 +21,23 @@
               <h:outputText value="SWIFT:"/>
               <h:inputText id="swift" required="false" value="#{cuentaSegregadaAbrir.seg.swift}" class="controls"/>
               <h:message id="swiftMessage" for="swift"/>
+
+              
+              <h:outputText value="Estado:"/>
+              <h:inputText id="estado" required="true" value="#{cuentaPooledAbrir.seg.estado}" class="controls"/>
+              <h:message id="estadoMessage" for="estado"/>
+
+              <h:outputText value="Fecha Apertura:"/>
+              <h:inputText id="fechaApertura" required="true" value="#{cuentaPooledAbrir.seg.fechaApertura}" class="controls"/>
+              <h:message id="fechaAperturaMessage" for="fechaApertura"/>
+
+              <h:outputText value="Fecha Cierre:"/>
+              <h:inputText id="fechaCierre" required="false" value="#{cuentaPooledAbrir.seg.fechaCierre}" class="controls"/>
+              <h:message id="fechaCierreMessage" for="fechaCierre"/>
+
+              <h:outputText value="Clasificacion:"/>
+              <h:inputText id="clasificacion" required="false" value="#{cuentaPooledAbrir.seg.clasificacion}" class="controls"/>
+              <h:message id="clasificacionMessage" for="clasificacion"/>
 
               <h:outputText value="comision:"/>
               <h:inputText id="comision" required="false" value="#{cuentaSegregadaAbrir.seg.comision}" class="controls"/>
