--- a/proyecto-war/src/main/webapp/cuentaSegregadaCerrar.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaCerrar.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
        <h1><h:outputText id="cuentaSegregadaCerrar" value="Cerrar una cuenta segregada"/></h1>
-       <h:form id="cuentaSegregadaCerrar">
+       <h:form id="CuentaSegregadaCerrar">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
               <h:commandButton id="cuentaSegregadaAbrirClick" value="BotonCuentaSegregada" action="#{cuentaPooledCerrar.cuentaSegregadaCerrar()}" class="buttons"/>
