--- a/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
@@ -24,19 +24,19 @@
 
               
               <h:outputText value="Estado:"/>
-              <h:inputText id="estado" required="true" value="#{cuentaPooledAbrir.seg.estado}" class="controls"/>
+              <h:inputText id="estado" required="true" value="#{cuentaSegregadaAbrir.seg.estado}" class="controls"/>
               <h:message id="estadoMessage" for="estado"/>
 
               <h:outputText value="Fecha Apertura:"/>
-              <h:inputText id="fechaApertura" required="true" value="#{cuentaPooledAbrir.seg.fechaApertura}" class="controls"/>
+              <h:inputText id="fechaApertura" required="true" value="#{cuentaSegregadaAbrir.seg.fechaApertura}" class="controls"/>
               <h:message id="fechaAperturaMessage" for="fechaApertura"/>
 
               <h:outputText value="Fecha Cierre:"/>
-              <h:inputText id="fechaCierre" required="false" value="#{cuentaPooledAbrir.seg.fechaCierre}" class="controls"/>
+              <h:inputText id="fechaCierre" required="false" value="#{cuentaSegregadaAbrir.seg.fechaCierre}" class="controls"/>
               <h:message id="fechaCierreMessage" for="fechaCierre"/>
 
               <h:outputText value="Clasificacion:"/>
-              <h:inputText id="clasificacion" required="false" value="#{cuentaPooledAbrir.seg.clasificacion}" class="controls"/>
+              <h:inputText id="clasificacion" required="false" value="#{cuentaSegregadaAbrir.seg.clasificacion}" class="controls"/>
               <h:message id="clasificacionMessage" for="clasificacion"/>
 
               <h:outputText value="comision:"/>
