--- a/proyecto-war/src/main/webapp/transaccionGenerar.xhtml
+++ b/proyecto-war/src/main/webapp/transaccionGenerar.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
        <h1><h:outputText id="transaccionGenerar" value="Realizar transaccion"/></h1>
-       <h:form id="transaccionGenerar">
+       <h:form id="transaccionGenera">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
               <h:commandButton id="transaccionGenerarClick" value="BotonAutorizadoAniadir" action="#{transaccionGenerar.transaccionGenerar()}" class="buttons"/>
