--- a/proyecto-war/src/main/webapp/empresaAlta.xhtml
+++ b/proyecto-war/src/main/webapp/empresaAlta.xhtml
@@ -24,7 +24,7 @@
               <h:message id="razonSocialMessage" for="razonSocial"/>
 
               <h:outputText value="Identificacion:"/>
-              <h:inputText id="identificacion" required="true" value="#{empresaAlta.empresa.identificacion}" class="controls"/>
+              <h:inputText id="identificacion" required="true" value="#{empresaAlta.empresa.id}" class="controls"/>
               <h:message id="identificacionMessage" for="identificacion"/>
 
 
