--- a/proyecto-war/src/main/webapp/individualEliminar.xhtml
+++ b/proyecto-war/src/main/webapp/individualEliminar.xhtml
@@ -16,7 +16,7 @@
 
 
               <h:outputText value="ID:"/>
-              <h:inputText id="id" required="true" value="#{individualEliminar.individual.id"/>
+              <h:inputText id="id" required="true" value="#{individualEliminar.individual.id}"/>
               <h:message id="idMessage" for="id"/>
               
 
