--- a/proyecto-war/src/main/webapp/empresaEliminar.xhtml
+++ b/proyecto-war/src/main/webapp/empresaEliminar.xhtml
@@ -16,7 +16,7 @@
 
               
               <h:outputText value="ID:"/>
-              <h:inputText id="id" required="true" value="#{empresaEliminar.empresa.id"/>
+              <h:inputText id="id" required="true" value="#{empresaEliminar.empresa.id}"/>
               <h:message id="idMessage" for="id"/>
               
 
