--- a/proyecto-war/src/main/webapp/individualAlta.xhtml
+++ b/proyecto-war/src/main/webapp/individualAlta.xhtml
@@ -27,7 +27,7 @@
               <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>
 
               <h:outputText value="Identificacion:"/>
-              <h:inputText id="identificacion" required="true" value="#{individualAlta.individual.identificacion}" class="controls"/>
+              <h:inputText id="identificacion" required="true" value="#{individualAlta.individual.id}" class="controls"/>
               <h:message id="identificacionMessage" for="identificacion"/>
 
               <h:outputText value="Tipo de Usuario:"/>
