--- a/proyecto-war/src/main/webapp/autorizadosAniadir.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosAniadir.xhtml
@@ -30,7 +30,7 @@
               <h:inputText id="direccion" required="true" value="#{autorizadosAniadir.personaAut.direccion}" class="controls"/>
               <h:message id="direccionMessage" for="direccion"/>
 
-              <h:outputText value="Fecha Nacimiento:"/>
+              <h:outputText value="Fecha Nacimiento(yyyy-mm-dd):"/>
               <h:inputText id="fechaNacimiento" required="false" value="#{autorizadosAniadir.personaAut.fechaNacimiento}" class="controls"/>
               <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>
 
@@ -38,11 +38,11 @@
               <h:inputText id="estado" required="false" value="#{autorizadosAniadir.personaAut.estado}" class="controls"/>
               <h:message id="estadoMessage" for="estado"/>
 
-              <h:outputText value="Fecha Inicio:"/>
+              <h:outputText value="Fecha Inicio(yyyy-mm-dd):"/>
               <h:inputText id="fechaInicio" required="false" value="#{autorizadosAniadir.personaAut.fechaInicio}" class="controls"/>
               <h:message id="fechaInicioMessage" for="fechaInicio"/>
 
-              <h:outputText value="Fecha Fin:"/>
+              <h:outputText value="Fecha Fin(yyyy-mm-dd):"/>
               <h:inputText id="fechaFin" required="false" value="#{autorizadosAniadir.personaAut.fechaFin}" class="controls"/>
               <h:message id="fechaFinMessage" for="fechaFin"/>
 
