--- a/proyecto-war/src/main/webapp/empresaAlta.xhtml
+++ b/proyecto-war/src/main/webapp/empresaAlta.xhtml
@@ -36,11 +36,11 @@
               <h:inputText id="estado" required="true" value="#{empresaAlta.empresa.estado}" class="controls"/>
               <h:message id="estadoMessage" for="estado"/>
 
-              <h:outputText value="Fecha de alta:"/>
+              <h:outputText value="Fecha de alta(yyyy-mm-dd):"/>
               <h:inputText id="fechaAlta" required="true" value="#{empresaAlta.empresa.fechaAlta}" class="controls"/>
               <h:message id="fechaAltaMessage" for="fechaAlta"/>
 
-              <h:outputText value="Fecha de baja:"/>
+              <h:outputText value="Fecha de baja(yyyy-mm-dd):"/>
               <h:inputText id="fechaBaja" required="false" value="#{empresaAlta.empresa.fechaBaja}" class="controls"/>
               <h:message id="fechaBajaMessage" for="fechaBaja"/>
 
