--- a/proyecto-war/src/main/webapp/mainAdmin.xhtml
+++ b/proyecto-war/src/main/webapp/mainAdmin.xhtml
@@ -54,7 +54,8 @@
 
               <!--RF 12-->
               <br><h:button outcome ="infomeAlemaniaGenerar.xhtml" id="infomeAlemaniaGenerar" value="Generar informe Alemania" class="buttons"/> </br>
-             
+              <br><h:button outcome ="index.xhtml" id="cerrarSes" value="Cerrar sesión" class="buttons"/> </br>
+              
 
               <!--RF 16-->
               <!--Por implementar-->
