--- a/proyecto-war/src/main/webapp/cuentaPooledAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaPooledAbrir.xhtml
@@ -39,6 +39,8 @@
               <h:message id="clasificacionMessage" for="clasificacion"/>
 
        </h:form>
+
+       <p>Para volver al inicio, pinche <h:link outcome="mainAdmin.xhtml">aquí</h:link></p>
           
 </h:body>
 </html>
