--- a/proyecto-war/src/main/webapp/mainUsuario.xhtml
+++ b/proyecto-war/src/main/webapp/mainUsuario.xhtml
@@ -18,6 +18,7 @@
 
               <!--RF 14-->
               <br><h:button outcome ="transaccionGenerar.xhtml" id="transaccionGenerar" value="Generar transaccion" class="buttons"/> </br>
+              <br><h:button outcome ="verCuentas.xhtml" id="verCuentas" value="Ver cuentas" class="buttons"/> </br>
               <br><h:button outcome ="index.xhtml" id="cerrarSes" value="Cerrar sesión" class="buttons"/> </br>       
 
 
