--- a/proyecto-war/src/main/webapp/transaccionGenerar.xhtml
+++ b/proyecto-war/src/main/webapp/transaccionGenerar.xhtml
@@ -31,5 +31,6 @@
 
           </h:panelGrid>
        </h:form>
+       <p>Para volver al inicio, pinche <h:link outcome="mainUsuario.xhtml">aquí</h:link></p>
 </h:body>
 </html>
