--- a/proyecto-war/src/main/webapp/autorizadosEliminar.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosEliminar.xhtml
@@ -21,5 +21,6 @@
 
           </h:panelGrid>
        </h:form>
+       <p>Para volver al inicio, pinche <h:link outcome="mainAdmin.xhtml">aquí</h:link></p>
 </h:body>
 </html>
