--- a/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaAbrir.xhtml
@@ -45,5 +45,7 @@
 
           </h:panelGrid>
        </h:form>
+
+       <p>Para volver al inicio, pinche <h:link outcome="mainAdmin.xhtml">aquí</h:link></p>
 </h:body>
 </html>
