--- a/proyecto-war/src/main/webapp/cuentaSegregadaCerrar.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaCerrar.xhtml
@@ -23,5 +23,7 @@
               
           </h:panelGrid>
        </h:form>
+
+       <p>Para volver al inicio, pinche <h:link outcome="mainAdmin.xhtml">aquí</h:link></p>
 </h:body>
 </html>
