--- a/proyecto-war/src/main/webapp/empresaModificar.xhtml
+++ b/proyecto-war/src/main/webapp/empresaModificar.xhtml
@@ -59,6 +59,8 @@
 
           </h:panelGrid>
        </h:form>
+
+       <p>Para volver al inicio, pinche <h:link outcome="mainAdmin.xhtml">aquí</h:link></p>
 </h:body>
 
 </html>
