--- a/proyecto-war/src/main/webapp/individualAlta.xhtml
+++ b/proyecto-war/src/main/webapp/individualAlta.xhtml
@@ -54,6 +54,10 @@
               <h:inputText id="direccion" required="true" value="#{individualAlta.individual.direccion}" class="controls"/>
               <h:message id="direccionMessage" for="direccion"/>
 
+              <h:outputText value="Pais:"/>
+              <h:inputText id="pais" required="true" value="#{individualAlta.individual.pais}" class="controls"/>
+              <h:message id="paisMessage" for="pais"/>
+
               <h:outputText value="Ciudad:"/>
               <h:inputText id="ciudad" required="true" value="#{individualAlta.individual.ciudad}" class="controls"/>
               <h:message id="ciudadMessage" for="ciudad"/>
