--- a/proyecto-war/src/main/webapp/empresaAlta.xhtml
+++ b/proyecto-war/src/main/webapp/empresaAlta.xhtml
@@ -48,6 +48,10 @@
               <h:inputText id="direccion" required="true" value="#{empresaAlta.empresa.direccion}" class="controls"/>
               <h:message id="direccionMessage" for="direccion"/>
 
+              <h:outputText value="Pais:"/>
+              <h:inputText id="pais" required="true" value="#{empresaAlta.empresa.pais}" class="controls"/>
+              <h:message id="paisMessage" for="pais"/>
+
               <h:outputText value="Ciudad:"/>
               <h:inputText id="ciudad" required="true" value="#{empresaAlta.empresa.ciudad}" class="controls"/>
               <h:message id="ciudadMessage" for="ciudad"/>
