--- a/proyecto-war/src/main/webapp/autorizadosModificar.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosModificar.xhtml
@@ -30,9 +30,9 @@
               <h:inputText id="direccion" required="true" value="#{autorizadosModificar.personaAut.direccion}" class="controls"/>
               <h:message id="direccionMessage" for="direccion"/>
 
-              <h:outputText value="Fecha Nacimiento:"/>
+             <!---- <h:outputText value="Fecha Nacimiento:"/>
               <h:inputText id="fechaNacimiento" required="false" value="#{autorizadosModificar.personaAut.fechaNacimiento}" class="controls"/>
-              <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>
+              <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>-->
 
               <h:outputText value="Estado:"/>
               <h:inputText id="estado" required="false" value="#{autorizadosModificar.personaAut.estado}" class="controls"/>
@@ -42,9 +42,9 @@
               <h:inputText id="fechaInicio" required="false" value="#{autorizadosModificar.personaAut.fechaInicio}" class="controls"/>
               <h:message id="fechaInicioMessage" for="fechaInicio"/>
 
-              <h:outputText value="Fecha Fin:"/>
+              <!----<h:outputText value="Fecha Fin:"/>
               <h:inputText id="fechaFin" required="false" value="#{autorizadosModificar.personaAut.fechaFin}" class="controls"/>
-              <h:message id="fechaFinMessage" for="fechaFin"/>
+              <h:message id="fechaFinMessage" for="fechaFin"/>-->
 
 
           </h:panelGrid>
